[gd_scene load_steps=8 format=3 uid="uid://bifs473fm4tgd"]

[ext_resource type="Script" uid="uid://ci7358xnimi6e" path="res://Scenes/ConversationalCombat/conversational_combat.gd" id="1_lyh4j"]
[ext_resource type="PackedScene" uid="uid://c16mt3qs6iq3f" path="res://Player/inventory_ui.tscn" id="1_sn660"]
[ext_resource type="FontFile" uid="uid://fmbpcembvddm" path="res://Assets/Art/Font/Adventurer.ttf" id="2_85cmc"]
[ext_resource type="PackedScene" uid="uid://daec4ygilxlry" path="res://Scenes/inventory_hotbar.tscn" id="4_51x5w"]
[ext_resource type="PackedScene" uid="uid://bovat2846wx1q" path="res://UI/conversation_log.tscn" id="5_mi5jt"]
[ext_resource type="Script" uid="uid://cbturdqq18biw" path="res://Scenes/ConversationalCombat/node.gd" id="5_ugwn1"]
[ext_resource type="PackedScene" uid="uid://cgeedqhohwa5g" path="res://Global/inventory_item_3d.tscn" id="6_mi5jt"]

[node name="Conversational Combat" type="Node2D"]
script = ExtResource("1_lyh4j")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="InventoryBackground" type="ColorRect" parent="UI/CanvasLayer"]
offset_left = 849.0
offset_top = 3.0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.34002143, 0.24820253, 0.10801863, 1)

[node name="Inventory_Ui" parent="UI/CanvasLayer/InventoryBackground" instance=ExtResource("1_sn660")]
layout_mode = 0
offset_left = -62.0
offset_top = 63.0
offset_right = -22.0
offset_bottom = 103.0
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="UI/CanvasLayer/InventoryBackground"]
layout_mode = 0
offset_left = 72.0
offset_top = 12.0
offset_right = 241.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("2_85cmc")
theme_override_font_sizes/font_size = 41
text = "Inventory"
horizontal_alignment = 1

[node name="CraftingArea" type="ColorRect" parent="UI/CanvasLayer"]
offset_left = 327.0
offset_top = 418.0
offset_right = 849.0
offset_bottom = 651.0
color = Color(0.30527, 0.041507185, 0.4452312, 1)

[node name="Inventory_Hotbar" parent="UI/CanvasLayer/CraftingArea" instance=ExtResource("4_51x5w")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.95300007
anchor_right = 0.038000003
offset_left = 8.0000305
offset_top = 36.95099
offset_right = -11.83597
offset_bottom = 26.0
scale = Vector2(0.8, 0.8)

[node name="LogBackground" type="ColorRect" parent="UI/CanvasLayer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 321.0
offset_bottom = 648.0
color = Color(0.34002143, 0.24820253, 0.10801863, 1)

[node name="ConversationLog" parent="UI/CanvasLayer/LogBackground" instance=ExtResource("5_mi5jt")]
layout_mode = 1

[node name="Label" type="Label" parent="UI/CanvasLayer/LogBackground"]
visible = false
layout_mode = 0
offset_left = -4.0
offset_top = 13.0
offset_right = 314.0
offset_bottom = 661.0
text = "A: I don't trust a single thing you've said.
T: Are you here to fix me, or to insult me?"

[node name="enemyPortrait" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 694.0
offset_right = 851.0
offset_bottom = 156.0
color = Color(0.21568628, 0.14901961, 0.07450981, 1)

[node name="Label" type="Label" parent="UI/enemyPortrait"]
layout_mode = 0
offset_left = 4.0
offset_top = 160.0
offset_right = 117.0
offset_bottom = 183.0
text = "Player Health: "

[node name="playerPortrait" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 326.0
offset_top = 1.0
offset_right = 483.0
offset_bottom = 157.0
color = Color(0.21159282, 0.2991521, 0.090058975, 1)

[node name="Label" type="Label" parent="UI/playerPortrait"]
layout_mode = 0
offset_top = 158.0
offset_right = 40.0
offset_bottom = 181.0
text = "Player Health: "

[node name="Control" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 849.0
offset_top = 3.0
offset_right = 849.0
offset_bottom = 647.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 849.0
offset_top = 3.0
offset_right = 1148.0
offset_bottom = 647.0

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("5_ugwn1")

[node name="Craft Button" type="Button" parent="TurnManager"]
offset_left = 512.0
offset_top = 314.0
offset_right = 659.0
offset_bottom = 418.0
theme_override_fonts/font = ExtResource("2_85cmc")
theme_override_font_sizes/font_size = 31
text = "Craft"

[node name="Bloody screwdriver" parent="TurnManager" instance=ExtResource("6_mi5jt")]
visible = false
item_type = "Artifact"
item_name = "Screwdriver"

[node name="Attack Button" type="Button" parent="TurnManager"]
visible = false
offset_left = 339.0
offset_top = 310.0
offset_right = 486.0
offset_bottom = 414.0
theme_override_fonts/font = ExtResource("2_85cmc")
theme_override_font_sizes/font_size = 31
text = "Attack"

[connection signal="button_down" from="TurnManager/Craft Button" to="TurnManager" method="_on_craft_button_button_down"]
[connection signal="button_down" from="TurnManager/Attack Button" to="TurnManager" method="_on_attack_button_button_down"]
